IMPALA-293: Impala is unable to query RCFile tables which describe less columns than the file's header.